<resources>
    <string name="app_name">DienMayChoLonMobi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logo_dmcl">Logo DMCL</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="back">Back</string>
    <string name="avatar">avatar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="tim_kiem_san_pham">Tìm kiếm sản phẩm…</string>
    <string name="cung_cap_boi">Cung cấp bởi</string>
    <string name="them">THÊM</string>
    <string name="tang">Tầng</string>
    <string name="bai_viet_tham_khao">Bài viết tham khảo</string>
    <string name="thuong_hieu">Thương hiệu</string>
    <string name="thong_so_ky_thuat">Thông số kỹ thuật</string>
    <string name="xem_them">Xem thêm</string>
    <string name="tinh_nang_noi_bat">Tính năng nổi bật</string>
    <string name="danh_muc">Danh mục</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="ban_quen_mat_khau">Bạn quên mật khẩu?</string>
    <string name="nho_mat_khau">Nhớ mật khẩu</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="email_username">Email/Tên đăng nhập</string>
    <string name="dang_nhap_tai_khoan_DMCL">Đăng nhập tài khoản DIENMAYCHOLON.VN</string>
    <string name="dang_ki_tk_moi">Đăng kí tài khoản mới</string>
    <string name="ban_da_co_tk">Bạn đã có tài khoản?</string>

    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="vui_long_dang_nhap">Vui lòng đăng nhập</string>

    <string name="facebook_app_id">1891604161102448</string>
    <string name="fb_login_protocol_scheme">fb1891604161102448</string>
</resources>
