<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cdl_app_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dienmaycholon.dienmaycholonmobi.features.home.view.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarStyle"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/logo_dmcl"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/logo_dmcl" />
        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray" />

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/txtvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_search"
                android:drawableStart="@drawable/ic_search"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingTop="10dp"
                android:text="@string/tim_kiem_san_pham"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/btnBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_barcode"
                tools:ignore="RtlHardcoded" />

        </android.support.design.widget.CoordinatorLayout>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/frmContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

</android.support.design.widget.CoordinatorLayout>
